2011-09-22  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.spec.in (BuildRequires): Added build dependency on
	texinfo.

2011-09-20  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.spec.in (Release): Removed devel packages and bumped
	release number to 2.

2011-07-05  John D. Ramsdell  <ramsdell@mitre.org>

	* CVS: Tagged as datalog-1_6.

	* lua/*: Applied patch http://www.lua.org/ftp/patch-lua-5.1.4-3.

	* datalog.spec.in:  Added changelog and SMP make flags.

2011-07-01  John D. Ramsdell  <ramsdell@mitre.org>

	* loader.c (addstr): Corrected the computation of the mark for a
	quoted constant that spans multiple buffers.  When reading a
	quoted string that spans multiple buffers, bytes were lost.  This
	fixes a reader bug reported by Georges Louis.

2010-05-27  John D. Ramsdell  <ramsdell@mitre.org>

	* CVS: Tagged as datalog-1_5.

	* interp.c (getaline): Rename function from getline to avoid
	conflict with the one in <stdio.h>.

2009-03-30  John D. Ramsdell  <ramsdell@mitre.org>

	* CVS: Tagged as datalog-1_4.

	* datalog.c (dl_ask): Added forgotten pop of the answer array so
	as to fix a space leak reported by Faisal Alquaddoomi.

	* Updated Lua sources to version 5.1.4.

2007-07-18  John D. Ramsdell  <ramsdell@mitre.org>

	* CVS: Tagged as datalog-1_3.

	* interp.c (main): Add dl_close so as to allow valgrind leak
	check.

2007-04-14  John D. Ramsdell  <ramsdell@mitre.org>

	* Updated Lua sources to version 5.1.2.

	* configure.ac: Changed version number to 1.3

2006-09-29  John D. Ramsdell  <ramsdell@mitre.org>

	* CVS: Tagged as datalog-1_2.

	* Added the Lua sources into the distribution so that this program
	no longer depends on the right Lua distribution being installed.

	* datalog.spec.in: The library and the header are made available
	only in a separate development package.  The development package
	still depends on the right Lua distribution being installed.

2006-08-24  John D. Ramsdell  <ramsdell@mitre.org>
