@@ -1,3 +1,8 @@
+2011-09-27  John D. Ramsdell  <ramsdell@mitre.org>
+
+	* configure.ac, Makefile.am, datalog.spec.in: Add --with-lua
+	option and when specified, use the installed lua package.
+
 2011-09-22  John D. Ramsdell  <ramsdell@mitre.org>
 
 	* datalog.spec.in (BuildRequires): Added build dependency on
